# social-inverse-planning_cogsci-26

./: .gitignore  Makefile  README.md  pyproject.toml  utils.py
analysis/: food-forw-intimacy-desire-analysis.qmd  food-inv-desire-intimacy-alt-analysis.qmd  food-inv-intimacy-desire-alt-analysis.qmd  inv-plan-combined-correlation.qmd  utils.R
data/: README.md
data/food_forw_intimacy_desire/: exit_survey.csv  main_trials.csv  main_trials_long.csv
data/food_inv_desire_intimacy_alt/: exit_survey.csv  main_trials.csv  main_trials_long.csv
data/food_inv_intimacy_desire_alt/: exit_survey.csv  main_trials.csv  main_trials_long.csv
experiments/: README.md  csv_to_json.py  scenarios.csv  scenarios.py
experiments/food_forw_intimacy_desire/: README.md  experiment.js  index.html  probability-sliders.js  trials.js
experiments/food_inv_desire_intimacy_alt/: README.md  experiment.js  trials.js
experiments/food_inv_intimacy_desire_alt/: README.md  experiment.js  index.html  trials.js
model/: actors.py  observers.py  stipulated_tables.py  tables.py  test_model_compliance.py  utility.py
model/cv/: _alt_dispatcher.py  _forward_dispatcher.py  cv_food_forw_intimacy_desire.py  cv_food_inv_desire_intimacy_alt.py  cv_food_inv_intimacy_desire_alt.py
model/forward/: _shared.py  fit_food_forw_intimacy_desire.py  predict_food_forw_intimacy_desire.py
model/inverse/: _helpers.py  fit_food_inv_desire_intimacy_alt.py  fit_food_inv_intimacy_desire_alt.py  predict_food_inv_desire_intimacy_alt.py  (+1 more)
scripts/: generate_values_tex.py  refit_desire_inverse_rating_scale.py
(+28 files in other folders)
